# hust.year20231.c_basic

./: .gitignore  CMakeLists.txt  main.c
array/: array_list.c  array_list.h
contest10/: CMakeLists.txt  hash_string.c  search_string.c  test_source.txt  word_frequency.c
contest11/: CMakeLists.txt  bank_transaction.c
contest12/: CMakeLists.txt  binary_sequence_no_subseq.c  family_tree.c  family_tree.txt
contest4/: CMakeLists.txt  tree_manipulation.c
contest6/: CMakeLists.txt  sap_xep_danh_sach.c  select_sort_interger.c
contest7/: CMakeLists.txt  qsort_danh_sach.c  qsort_int_arr.c
contest8/: CMakeLists.txt  heap_sort_danh_sach.c  heap_sort_int_arr.c
contest9/: CMakeLists.txt  pair_sum.c  quan_ly_ho_so.c
core/: heap.h  type.c  type.h
list/: double_linked_list.c  queue.c  single_linked_list.c  single_linked_list.h  stack.h
minilib/: CMakeLists.txt  README.txt
minilib/array/: array_list.c  array_list.h
minilib/core/: hash.c  hash.h  heap.c  heap.h  type.h
minilib/list/: double_linked_list.c  double_linked_list.h  queue.c  queue.h  single_linked_list.c  single_linked_list.h  stack.c  stack.h
minilib/map/: hash_map.c  hash_map.h
minilib/search/: binary_search.c  binary_search.h
minilib/sort/: quick_sort.c  quick_sort.h  selection_sort.c  selection_sort.h
minilib/tests/: CMakeLists.txt
minilib/tests/list/: CMakeLists.txt  stack_test.c
minilib/tests/sort/: CMakeLists.txt  quick_sort_test.c
minilib/tests/tree/: CMakeLists.txt  tree_test.c
minilib/tree/: binary_tree.c  binary_tree.h  tree.c  tree.h  tree_define.h
sort/: heap_sort.c  heap_sort.h  merge_sort.c  merge_sort.h
test2/: CMakeLists.txt  count_binary_nodes_with_2_children.c
test3/: CMakeLists.txt  odd_even_sequence.c  time-table.c  time_table.c
tests/: CMakeLists.txt
tests/list/: stack_test.c
tests/tree/: tree_test.c
tree/: binary_tree.c  tree.c  tree.h
